--- a/index.html
+++ b/index.html
@@ -17,6 +17,27 @@
     <title>Pricy - Pricing Page</title>
 </head>
 <body>
-    
+    <div class="container font-sans bg-gradient-to-b from-[#DAF2FF] to-[#B8E3FC] h-screen">
+            <div class="px-2 py-2  md:px-36 md:">
+            <nav class="flex justify-between items-center md:mt-8">
+                <div class="flex items-center">
+                    <img src="src/img/Logo.svg" class="md:w-10 md:h-10" width="35px" alt="" srcset="">
+                    <h3 class="font-semibold ml-2 md:text-md">Hoster</h3>
+                </div>
+                <div class="hidden md:block">
+                    <ul class="flex space-x-10 text-sm text-slate-700">
+                        <li class="hover:text-black hover:font-semibold"><a href="">Home</a></li> 
+                        <li class="hover:text-black hover:font-semibold"><a href="">Product</a></li> 
+                        <li class="hover:text-black hover:font-semibold"><a href="">Pricing</a></li> 
+                        <li class="hover:text-black hover:font-semibold"><a href="">Contact Us</a></li> 
+                    </ul>
+                </div>
+                <button class="hidden md:block text-sm bg-slate-800 text-white py-3 px-7 font-semibold rounded-full hover:bg-slate-100 hover:text-slate-800">My Account</button>
+                <div class="md:hidden">
+                    <img src="src/img/hamburger.svg" width="25px" alt="" srcset="">
+                </div>
+            </nav>
+        </div>
+    </div>
 </body>
 </html>
