--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                     <img src="src/img/hamburger.svg" width="25px" alt="" srcset="">
                 </div>
             </nav>
-        </div>
+            <h1 class="font-medium text-3xl text-center w-5/6 mx-auto mt-14 text-black md:mt-24 md:text-4xl md:w-2/3">Select the Best Web Hosting Plan for Your Website</h1>
+            <p class="text-sm leading-4 mt-4 mx-auto w-4/5 text-slate-500 text-center md:text-base md:w-[55%]">From basic to advanced, we have a web hosting plan that's right for you. Compare our options and select the one that meets your needs.</p>
+            </div>
     </div>
 </body>
 </html>
