--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Pricy - Pricing Page</title>
 </head>
 <body>
-    <div class="container font-sans bg-gradient-to-b from-[#DAF2FF] to-[#B8E3FC] h-screen">
+    <div class="container font-sans bg-gradient-to-b from-[#DAF2FF] to-[#B8E3FC] md:h-[770px] h-[1800px]">
             <div class="px-2 py-2  md:px-36 md:">
             <nav class="flex justify-between items-center md:mt-8">
                 <div class="flex items-center">
@@ -39,6 +39,141 @@
             </nav>
             <h1 class="font-medium text-3xl text-center w-5/6 mx-auto mt-14 text-black md:mt-24 md:text-4xl md:w-2/3">Select the Best Web Hosting Plan for Your Website</h1>
             <p class="text-sm leading-4 mt-4 mx-auto w-4/5 text-slate-500 text-center md:text-base md:w-[55%]">From basic to advanced, we have a web hosting plan that's right for you. Compare our options and select the one that meets your needs.</p>
+            <div class="p-5 mt-16">
+                <div class="md:grid md:grid-cols-3 md:gap-5">
+                    <!--Card-->
+                    <div class="bg-white rounded-md shadow p-3 h-fit">
+                        <h3 class="font-bold text-base">Basic</h3>
+                        <h2 class="font-bold text-3xl my-2">$5/mth</h2>
+                        <p class="text-sm font-medium text-slate-500">It offers a reliable and cost-effective hosting solution with all the essentials you need to get started.</p>
+                        <div class="my-3">
+                            <div class="flex items-center">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">10 GB storage</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">Unlimited bandwidth</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">3 email accounts</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">24/7 customer support</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/cross.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">Daily backups</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/cross.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">SSL certificate</p>
+                            </div>
+                        </div>
+                        <hr class="border-1 my-5">
+                        <p class="font-medium text-slate-500 text-xs">Additional Feature:</p>
+                        <p class="font-semibold text-xs text-black mb-3 mt-1">*$1/GB for additional storage</p>
+                        <button class="bg-cyan-400 text-white font-semibold w-full py-2 rounded-md mb-2 md:mt-4" >Choose</button>
+                    </div>
+                    <!--End Card-->
+                    <!--Card-->
+                    <div class="bg-slate-900 rounded-md shadow p-3 mt-4 md:mt-0 text-white h-fit">
+                        <h3 class="font-bold text-base">Professional</h3>
+                        <h2 class="font-bold text-3xl my-2">$25/mth</h2>
+                        <p class="text-sm font-medium text-slate-400">It includes a range of advanced features and resources to support and grow your online presence.</p>
+                        <div class="my-3">
+                            <div class="flex items-center">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-400 font-semibold">20 GB storage</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-400 font-semibold">Unlimited bandwidth</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-400 font-semibold">5 email accounts</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-400 font-semibold">24/7 customer support</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-400 font-semibold">Daily backups</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-400 font-semibold">SSL certificate</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-400 font-semibold">Database support</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-400 font-semibold">Advanced Security Measures</p>
+                            </div>
+                        </div>
+                        <hr class="border-1 my-5 border-slate-800">
+                        <p class="font-medium text-slate-400 text-xs">Additional Feature:</p>
+                        <p class="font-semibold text-xs text-white mb-3 mt-1">*$1/GB for additional storage</p>
+                        <button class="bg-cyan-400 text-white font-semibold w-full py-2 rounded-md mb-2 md:mt-4" >Choose</button>
+                    </div>
+                    <!--End Card-->
+                    <!--Card-->
+                    <div class="bg-white rounded-md shadow p-3 mt-4 md:mt-0 h-fit">
+                        <h3 class="font-bold text-base">Business</h3>
+                        <h2 class="font-bold text-3xl my-2">$50/mth</h2>
+                        <p class="text-sm font-medium text-slate-500">It offers the most robust set of features and resources to ensure the smooth operation and growth of your website.</p>
+                        <div class="my-3">
+                            <div class="flex items-center">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">50 GB storage</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">Unlimited bandwidth</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">10 email accounts</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">24/7 customer support</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">Daily backups</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">SSL certificate</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">Database support</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">Advanced Security Measures</p>
+                            </div>
+                            <div class="flex items-center mt-2">
+                            <img src="src/img/tick.svg" alt="">
+                            <p class="ml-2 text-slate-500 font-semibold">Dedicated IP address</p>
+                            </div>
+                        </div>
+                        <hr class="border-1 my-5">
+                        <p class="font-medium text-slate-500 text-xs">Additional Feature:</p>
+                        <p class="font-semibold text-xs text-black mb-3 mt-1">*$0.50/GB for additional storage</p>
+                        <button class="bg-cyan-400 text-white font-semibold w-full py-2 rounded-md mb-2 md:mt-4" >Choose</button>
+                    </div>
+                    <!--End Card-->
+                </div>
+            </div>
             </div>
     </div>
 </body>
