--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div class="container font-sans bg-gradient-to-b from-[#DAF2FF] to-[#B8E3FC] md:h-[770px] h-[1800px]">
             <div class="px-2 py-2  md:px-36 md:">
-            <nav class="flex justify-between items-center md:mt-8">
+            <nav class="flex justify-between items-center mt-5 md:mt-8">
                 <div class="flex items-center">
                     <img src="src/img/Logo.svg" class="md:w-10 md:h-10" width="35px" alt="" srcset="">
                     <h3 class="font-semibold ml-2 md:text-md">Hoster</h3>
